--- a/OnlineShope.API/OnlineShope.API.csproj
+++ b/OnlineShope.API/OnlineShope.API.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Autofac.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
       <PrivateAssets>all</PrivateAssets>
@@ -26,6 +29,7 @@
   <ItemGroup>
     <ProjectReference Include="..\OnlineShope.Applicaition\OnlineShope.Applicaition.csproj" />
     <ProjectReference Include="..\OnlineShope.Core\OnlineShope.Core.csproj" />
+    <ProjectReference Include="..\OnlineShope.Infrastructure\OnlineShope.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
