--- a/OnlineShope.Applicaition/OnlineShope.Applicaition.csproj
+++ b/OnlineShope.Applicaition/OnlineShope.Applicaition.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OnlineShope.Core\OnlineShope.Core.csproj" />
+    <ProjectReference Include="..\OnlineShope.Infrastructure\OnlineShope.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
