--- a/OnlineShope.API/appsettings.json
+++ b/OnlineShope.API/appsettings.json
@@ -5,8 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
     "OnlineShopConnection": "Server=.\\SQLSERVER2017;Database=OnlineShopDB;User Id=sa;Password=msaloq)30"
-  }
+  },
+  "Configs": {
+    "TokenKey": "RTES TY 1565 WE TEST AKZ AERIFY ERT OOKENS, REPLACE AB POIN YOUN OWN SECRET, IT HTR PO RET STRING",
+    "TokenTimeout": "5"
+  },
+  "AllowedHosts": "*"
 }
+
+
+
