--- a/OnlineShope.API/appsettings.json
+++ b/OnlineShope.API/appsettings.json
@@ -13,6 +13,8 @@
     "TokenTimeout": "5",
     "RefreshTokenTimeout": "5"
   },
+  "MediaPath": "Media\\Attachment",
+  "FileEncryptionKey": "MAKV2SPBNI54324",
   "AllowedHosts": "*"
 }
 
